re-formmated portfolio

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div>
           <img
             class="hero-avatar"
-            src="./assets/images/avatar_image_square.png"
+            src="./assets/images/bav-avatar-photo.jpg"
             alt="hero-image avatar"
           />
         </div>
@@ -138,18 +138,16 @@
       <div class="project-container">
         <div class="project-card grow">
             <!-- project image -->
-            <div>
                 <a
             target="blank"
             href="https://bavkudhail.github.io/meal-planner-project-1/"
           >
             <img
-              class="project-image-large"
+              class="project-image"
               src="./assets/images/Macro-meals-screenshot-2.JPG"
               alt="bav kudhail first portfolio screenshot"
             />
           </a>
-            </div>
             <!-- project text -->
           <div class="project-information">
             <h3>Macro Meals</h3>
@@ -180,13 +178,13 @@
           </div>
         </div>
         <!-- project card -->
-        <div class="project-card larger grow">
+        <div class="project-card grow">
           <a
             target="blank"
             href="https://bavkudhail.github.io/weather-dashboard/"
           >
             <img
-              class="project-image-large"
+              class="project-image"
               src="./assets/images/weather-dashboard-screenshot.JPG"
               alt="bav kudhail first portfolio screenshot"
             />
@@ -218,13 +216,14 @@
             </div>
           </div>
         </div> 
+        <!-- project card -->
         <div class="project-card larger grow">
           <a
             target="blank"
             href="https://bavkudhail.github.io/code-quiz-app/"
           >
             <img
-              class="project-image-large"
+              class="project-image"
               src="./assets/images/code-quiz-app-screenshot.JPG"
               alt="bav kudhail first portfolio screenshot"
             />
