Added Linkedin link and resume link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div>
-          <button class="resume-btn">View Resume</button>
+        <a class="resume-btn" href="https://drive.google.com/drive/folders/12OY0o8dBeStGhZlBbLgkGcTfKeLGlib6?usp=sharing">View Resume</a>
       </div>
     </section>
 
@@ -258,13 +258,13 @@
     </section> 
 
     <!-- contact section -->
-
     <section id="contact" class="sub-section-alt accent-section-pink">
       <h4 class="sub-heading">say hello</h4>
       <br>
       <p style="margin: 1rem;" class="intro-text">
         I am always open to design and development opportunities.
       </p>
+      <!-- github -->
         <div class="socials-contact">
             <div class="icon-container grow">
             <a
@@ -285,8 +285,9 @@
               </svg>
             </a>
             </div>
+            <!-- linkedin -->
             <div class="icon-container grow">
-              <a href="" class="social">
+              <a href="https://www.linkedin.com/in/bavkudhail/" class="social">
                   <svg 
                   xmlns="http://www.w3.org/2000/svg" 
                   fill="#0c0e3f"
@@ -295,6 +296,7 @@
                   viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
               </a>
           </div>
+          <!-- email -->
           <div class="icon-container grow" >
               <a href="mailto:bavkudhail@gmail.com" target=”_blank”" class="social">
                 <svg 
