updated portfolio to feature new project

--- a/index.html
+++ b/index.html
@@ -71,65 +71,6 @@
       </div>
     </section>
 
-    <!-- skills section -->
-    <!-- <section class="sub-section-alt accent-section">
-      <div class="information">
-        <h2 class="sub-heading">Skills</h2>
-        <p class="section-intro">
-          Here are some frameworks and languages that I know!
-        </p>
-      </div>
-      <div class="skill-container">
-        <div class="skill-card">
-          <img
-            class="skill-img"
-            src="./assets/images/character illustration.jpg"
-            alt="html-illustration"
-          />
-          <p>HTML</p>
-        </div>
-        <div class="skill-card">
-          <img
-            class="skill-img"
-            src="./assets/images/css_illustration.JPG"
-            alt="css-illustration"
-          />
-          <p>CSS</p>
-        </div>
-        <div class="skill-card">
-          <img
-            class="skill-img"
-            src="./assets/images/javascript illustration.JPG"
-            alt="javascript-illustration"
-          />
-          <p>Javascript</p>
-        </div>
-        <div class="skill-card">
-          <img
-            class="skill-img"
-            src="./assets/images/react illustration.JPG"
-            alt="react-illustration"
-          />
-          <p>React</p>
-        </div>
-        <div class="skill-card">
-          <img
-            class="skill-img"
-            src="./assets/images/skills_icon.png"
-            alt="placeholder-illustration"
-          />
-          <p>Node.JS</p>
-        </div>
-        <div class="skill-card">
-          <img
-            class="skill-img"
-            src="./assets/images/skills_icon.png"
-            alt="placeholder-illustration"
-          />
-          <p>And more!</p>
-        </div>
-      </div>
-    </section> -->
 
     <!-- project section -->
     <section class="sub-section-alt accent-section" id="projects">
@@ -177,6 +118,45 @@
             </div>
           </div>
         </div>
+         <!-- project card -->
+        <div class="project-card grow">
+          <a
+            target="blank"
+            href="https://peaceful-crag-60795.herokuapp.com/"
+          >
+            <img
+              class="project-image"
+              src="./assets/images/Creative-Labs.JPG"
+              alt="Creative_Labs_Screenshot"
+            />
+          </a>
+          <div class="project-information">
+            <h3>Creative Labs</h3>
+            <p class="subtext">
+              A social platform where creators can connect and build projects.
+            </p>
+            <hr />
+            <div class="project-links">
+              <p class="subtext">
+                <a
+                  class="project-link"
+                  target="blank"
+                  href="https://peaceful-crag-60795.herokuapp.com/"
+                  >Deploy Here</a
+                >
+              </p>
+              <p class="subtext">
+                <a
+                  class="project-link"
+                  target="blank"
+                  href="https://github.com/BavKudhail/Creative-Labs"
+                >
+                  View Source Code</a
+                >
+              </p>
+            </div>
+          </div>
+        </div> 
         <!-- project card -->
         <div class="project-card grow">
           <a
